--- a/AKchatApp/src/app/login-page/login-page.component.html
+++ b/AKchatApp/src/app/login-page/login-page.component.html
@@ -4,21 +4,24 @@
 
 <div class="text-center mt-3"><h2 class="text-secondary">Log-in to use this app</h2></div>
 
-<div class="d-flex justify-content-center mt-5">
+<div class="d-flex justify-content-center mt-5 mainBody">
     <div class="col-12 col-lg-5">
         <main class="form-signin">
             <form [formGroup]="userForm"(ngSubmit)="submitForm()" autocomplete="off" class="p-3 border">
+                <div *ngIf="userForm.errors?.['InvalidUser']" class="alert alert-danger">
+                    Invalid Credentials
+                </div>
                 <h4>Choose your name</h4>
                 <div class="form-floating mb-3">
                     <input formControlName="username" type="text" class="form-control" placeholder="Name" 
                     [class.is-invalid]="submitted && userForm.get('name')?.errors">
                     <label for="Name">Name</label>
-                    <span class="text-danger" *ngIf="submitted && userForm.get('name')?.hasError('required')">
+                    <span class="text-danger" *ngIf="submitted && userForm.get('username')?.hasError('required')">
                         Please choose a name
                     </span>
 
-                    <span class="text-danger" *ngIf="submitted && userForm.get('name')?.hasError('maxlength')||
-                    userForm.get('name')?.hasError('minlength')">
+                    <span class="text-danger" *ngIf="submitted && userForm.get('username')?.hasError('maxlength')||
+                    userForm.get('username')?.hasError('minlength')">
                         Your name must be atleast 3 , and maximum 15 characters
                     </span>
 
@@ -49,13 +52,15 @@
                 </div> -->
 
                 <div class="d-grid mt-4 px-4">
-                    <button class="btn btn-warning" type="submit">Submit</button>
+                    <button class="btn btn-warning" type="submit">Log In</button>
                 </div>
                 <div class="d-flex justify-content-center mt-3">
-                    <button class="btn btn-primary" [routerLink]="['/register']">Register</button >
+                    <p class="noAccount">Don't have an account?</p>
+                    <button class="btn btn-primary btn-sm" [routerLink]="['/register']">Register</button >
                 
                 </div>
             </form>
+
         </main>
     </div>
 </div>
