--- a/AKchatApp/src/app/login-page/login-page.component.html
+++ b/AKchatApp/src/app/login-page/login-page.component.html
@@ -11,6 +11,9 @@
                 <div *ngIf="userForm.errors?.['InvalidUser']" class="alert alert-danger">
                     Invalid Credentials
                 </div>
+                <div *ngIf="userForm.errors?.['CheckUser']" class="alert alert-danger">
+                    UserName taken
+                </div>
                 <h4>Choose your name</h4>
                 <div class="form-floating mb-3">
                     <input formControlName="username" type="text" class="form-control" placeholder="Name" 
