--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -17,7 +17,7 @@
                     <div class="col">
                         <div class="d-grid">
                             <button type="button" 
-                            class="btn card-text btn-block"><span> (you)</span></button>
+                            class="btn btn-success card-text btn-block">{{service.myName}}<span> (you)</span></button>
                         </div>
                     </div>
                 </div>
@@ -34,16 +34,11 @@
         <div class="card border-secondary">
             <div class="card-header h3 text-muted text-center">Messages</div>
             <div class="card-body" style="min-height: 500px;">
-                
                 <app-messages></app-messages>
             </div>
-
             <div class="card-footer">
-               
                 <app-chat-input></app-chat-input>
-
             </div>
-
         </div>
     </div>
 
