--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -1,31 +1,34 @@
 <div class="container mt-5 ">
 <div class="row">
     <div class="col-lg-2">
-        <div class="d-grid">
-            <button class="btn btn-primary btn-block" [routerLink]="['/login']" type="button" >Back To Home</button>
-        </div>
+        
     </div>
 </div>
 
 <div class="row mt-3 mainBody">
     <div class="col-lg-2">
+        <div class="d-grid mb-2 cpbtn">
+            <button class="btn btn-danger btn-block hbutton" [routerLink]="['/login']" type="button" >Back To Home</button>
+        </div>
+        <div class="d-grid mb-2 cpbtn">
+            <button class="btn  btn-block cgroup" (click)="openGroupModal()"  type="button" >Create Group</button>
+        </div>
         <div class="card border-secondary mb-3">
 
             <div class="card-header h3 text-muted text-center">Users</div>
             <div class="card-body">
-                <div class="row mt-1" *ngFor="let user of service.offlineUsers" >
+                <div class="row mt-1" >
                     <div class="col">
                         <div class="d-grid">
                             <button type="button" 
-                            class="btn btn-success card-text btn-block">{{user.username}}<span> (you)</span>
-                         <span class="position-absolute pos_dot"    *ngIf="service.onlineUsers.includes(user.username)">
-                            <div class="onlinesign"></div>
-                         </span>
-                        </button>
+                            class="btn btn-success card-text btn-block">{{service.myName}}<span> (you)</span></button>
                         </div>
                     </div>
                 </div>
-              
+
+                
+
+
             </div>
 
         </div>
