--- a/AKchatApp/src/app/chat/group-create/group-create.component.html
+++ b/AKchatApp/src/app/chat/group-create/group-create.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="modal-header">
     <h4 class="modal-title">toUser</h4>
     <button type="button" class="btn-close" (click)="activeModal.dismiss('Cross click')"></button>
@@ -13,25 +11,23 @@
                     <form [formGroup]="groupForm" autocomplete="off" class="p-3 border">
                         <h4>Enter Group Name</h4>
                         <div class="form-floating mb-3">
-                            <input formControlName="username" [(ngModel)]="grpname" type="text" class="form-control" placeholder="Name" 
-                            >
+                            <input formControlName="username" [(ngModel)]="grpname" type="text" class="form-control"
+                                placeholder="Name">
                             <label for="Name">Group Name</label>
                         </div>
                         <h4>Select Members</h4>
                         <div class="form-group">
-                            <label for="offlineUsers">Offline Users:</label>
-                            <div *ngFor="let user of service.offlineUsers">
-                              <label>
-                                <input type="checkbox"
-                                       name="offlineUsers"
-                                       (change)="updateSelectedUsers(user, $event)"
-                                 />
-                                {{  user.username }}
-                              </label>
+                            <label for="offlineUsers">All Users :</label>
+                            <div class="userlist" *ngFor="let user of service.offlineUsers">
+                                <label class="usercheck" >
+                                    <input class="ucheckbox" type="checkbox" name="offlineUsers"
+                                        (change)="updateSelectedUsers(user, $event)" />
+                                    {{ user.username }}
+                                </label>
                             </div>
-                          </div>
-                          <button (click)="getSelectedUsers()">Get Selected Users</button>
-                          
+                        </div>
+                        <!-- <button (click)="getSelectedUsers()">Get Selected Users</button> -->
+
                         <!-- <div class="form-floating mb-3" *ngFor="let user of service.offlineUsers; let i = index">
                             <div class="form-check border grp-members">
                                 <input  [formControlName]="i.toString()" mdbCheckboxclass="form-check-input"type="checkbox"value=""id="{{ 'flexCheckDefault' + i }}"/>
@@ -40,16 +36,16 @@
                                 </label>
                               </div>
                         </div> -->
-    
-<!--         
+
+
                         <div class="d-grid mt-4 px-4">
-                            <button class="btn btn-primary" type="submit">Register</button>
-                        </div> -->
-        
-                        
+                            <button (click)="getSelectedUsers()" class="btn btn-primary">Register</button>
+                        </div>
+
+
                     </form>
                 </main>
             </div>
 
+        </div>
     </div>
-</div>
