--- a/AKchatApp/src/app/chat/group-chat/group-chat.component.html
+++ b/AKchatApp/src/app/chat/group-chat/group-chat.component.html
@@ -1,7 +1,13 @@
 <div class="modal-header">
     <h4 class="modal-title">{{GroupName}}</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
-  </div>
+</div>
+<div class="d-flex ms-3"> <span style="color: red;"> Members : </span>
+    <div class="ms-2"  *ngFor="let user of service.grpmembers">
+        {{user.username}},
+     </div>
+</div>
+
   <div class="modal-body">
       <div class="card users-card">
           <div class="card-header"><h3>Messages</h3></div>
