--- a/AKchatApp/src/app/chat/group-create/group-create.component.html
+++ b/AKchatApp/src/app/chat/group-create/group-create.component.html
@@ -18,24 +18,17 @@
                         <h4>Select Members</h4>
                         <div class="form-group">
                             <label for="offlineUsers">All Users :</label>
-                            <div class="userlist" *ngFor="let user of service.offlineUsers">
-                                <label class="usercheck" *ngIf="service.myName !== user.username">
+                            <div  *ngFor="let user of service.offlineUsers">
+                            <div class="userlist" *ngIf="service.myName !== user.username">
+                                <label class="usercheck" >
                                     <input class="ucheckbox" type="checkbox" name="offlineUsers"
                                         (change)="updateSelectedUsers(user, $event)" />
                                     {{ user.username }}
                                 </label>
                             </div>
+                            </div>
                         </div>
-                        <!-- <button (click)="getSelectedUsers()">Get Selected Users</button> -->
-
-                        <!-- <div class="form-floating mb-3" *ngFor="let user of service.offlineUsers; let i = index">
-                            <div class="form-check border grp-members">
-                                <input  [formControlName]="i.toString()" mdbCheckboxclass="form-check-input"type="checkbox"value=""id="{{ 'flexCheckDefault' + i }}"/>
-                                <label class="form-check-label ms-3" for="{{ 'flexCheckDefault' + i }}">
-                                    {{user.username}}
-                                </label>
-                              </div>
-                        </div> -->
+                       
 
 
                         <div class="d-grid mt-4 px-4">
