commit for same  grp dispalys to the members without reloading

--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -16,7 +16,7 @@
         <div class="card user-list border-secondary mb-3">
 
             <div class="card-header h3 text-muted text-center">Users</div>
-            <div class="card-body p-2">
+            <div class="card-body ">
                 <div class="row mt-1" *ngFor="let user of service.offlineUsers">
                     <div class="col">
                         <div class="d-grid">
