--- a/AKchatApp/src/app/chat/chatpage/chatpage.component.html
+++ b/AKchatApp/src/app/chat/chatpage/chatpage.component.html
@@ -8,12 +8,14 @@
 <div class="row mt-3 mainBody">
     <div class="col-lg-2">
         <div class="d-grid mb-2 cpbtn">
-            <button class="btn btn-danger btn-block hbutton" [routerLink]="['/login']" type="button" >Back To Home</button>
+            <button class="btn btn-danger btn-block hbutton" (click)="logout()" type="button" >Back To Home</button>
         </div>
         <div class="d-grid mb-2 cpbtn">
             <button class="btn  btn-block cgroup" (click)="openGroupModal()"  type="button" >Create Group</button>
         </div>
+        
         <div class="card user-list border-secondary mb-3">
+
 
             <div class="card-header h3 text-muted text-center">Users</div>
             <div class="card-body ">
@@ -31,7 +33,7 @@
                         </div>
                     </div>
                 </div>
-
+                
                         <!-- for groups -->
                 <div class="row mt-1" *ngFor="let grp of service.groups">
                     <div class="col">
