--- a/AKchatApp/src/app/chat/messages/messages.component.html
+++ b/AKchatApp/src/app/chat/messages/messages.component.html
@@ -1,7 +1,14 @@
 <div style="overflow-y: auto;height: 400px;">
-    <p class="card-text" *ngFor="let message of messages">
-        <span class="text-primary fw-bolder">{{message.from}}:  </span>
-        <span class="ml-1">{{message.content}}</span>
-    </p>
+    <div class="card-text" *ngFor="let message of messages">
+        <div class="d-flex justify-content-between">
+            <div>
+                <span class="text-primary fw-bolder">{{message.from}}:  </span>
+                <span class="ml-1">{{message.content}}</span>
+            </div>
+            <div>
+                <span class=" date">{{message.time | date:'MMM dd, HH:mm'}}</span>
+            </div>
+        </div>
+    </div>
 
 </div>
