--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -1,6 +1,6 @@
 
-
-
+<div class="row d-flex justify-content-center">
+<div class="col-8">
 <mat-card>
     <mat-card-content class="d-flex flex-column">
         <label>Name</label>
@@ -101,3 +101,6 @@
 
     <mat-card-footer></mat-card-footer>
 </mat-card>
+
+</div>
+</div>
