--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -1,25 +1,15 @@
 
 <div class="row d-flex justify-content-center">
 <div class="col-8">
+    <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
 <mat-card>
     <mat-card-content class="d-flex flex-column">
         <label>Name</label>
         <mat-form-field appearance="outline" >
            
             <mat-label>Name</mat-label>
-            <input matInput>
+            <input matInput formControlName="Name">
         </mat-form-field>
-
-    </mat-card-content>
-
-    <mat-card-content class="d-flex flex-column">
-        <label>Profile Image</label>
-        <mat-form-field appearance="outline" >
-           
-            <mat-label>Image</mat-label>
-            <input matInput >
-        </mat-form-field>
-
     </mat-card-content>
 
 
@@ -28,7 +18,7 @@
         <mat-form-field appearance="outline" >
            
             <mat-label>Email</mat-label>
-            <input matInput>
+            <input matInput formControlName="Email">
         </mat-form-field>
 
     </mat-card-content>
@@ -37,7 +27,7 @@
     <mat-card-content class="d-flex flex-column mb-4 content-with-border">
         <div class="d-flex">
         <label>Gender :</label>
-        <mat-radio-group [(ngModel)]="Gender" class="mb-2">
+        <mat-radio-group [(ngModel)]="Gender" class="mb-2" formControlName="gender">
             <mat-radio-button class="ms-4" value="Male">Male</mat-radio-button>
             <mat-radio-button class="ms-4" value="Female">Female</mat-radio-button>
             <mat-radio-button class="ms-4" value="Other">Other</mat-radio-button>
@@ -53,7 +43,7 @@
         <mat-form-field appearance="outline" >
            
             <mat-label>Phone Number</mat-label>
-            <input matInput>
+            <input matInput formControlName="phonenumber">
         </mat-form-field>
 
     </mat-card-content>
@@ -61,7 +51,7 @@
 
     <mat-form-field class="date">
         <label>Choose Your Birth date</label>
-        <input matInput [matDatepicker]="picker">
+        <input matInput [matDatepicker]="picker" formControlName="dob">
         <mat-hint>MM/DD/YYYY</mat-hint>
         <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
@@ -72,7 +62,7 @@
         <mat-form-field appearance="outline" >
            
             <mat-label>About Me</mat-label>
-            <input matInput>
+            <input matInput formControlName="aboutme">
         </mat-form-field>
 
     </mat-card-content>
@@ -80,7 +70,7 @@
     <mat-card-content class="d-flex flex-column content-with-border">
         <div class="d-flex">
         <label>Status :</label>
-        <mat-radio-group [(ngModel)]="selectedOption" class="mb-2">
+        <mat-radio-group [(ngModel)]="selectedOption" class="mb-2" formControlName="status">
             <mat-radio-button class="ms-4" value="Single">Single</mat-radio-button>
             <mat-radio-button class="ms-4" value="Married">Married</mat-radio-button>
             <mat-radio-button class="ms-4" value="Prefer Not To Say">Prefer Not To Say</mat-radio-button>
@@ -89,18 +79,11 @@
           <p>You selected: {{ selectedOption }}</p>
 
     </mat-card-content>
-
-  
-
-  
-
-
-
-
-
-
+    <mat-card-content class="d-flex justify-content-end">
+            <button mat-raised-button color="primary" class="w-100" type="submit">Save</button>
+    </mat-card-content>
     <mat-card-footer></mat-card-footer>
 </mat-card>
-
+</form>
 </div>
 </div>
