--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -35,13 +35,12 @@
     <mat-card-content class="d-flex flex-column mb-4 content-with-border">
         <div class="d-flex">
         <label>Gender :</label>
-        <mat-radio-group [(ngModel)]="Gender" class="mb-2" formControlName="gender">
+        <mat-radio-group class="mb-2" formControlName="gender">
             <mat-radio-button class="ms-4" value="Male">Male</mat-radio-button>
             <mat-radio-button class="ms-4" value="Female">Female</mat-radio-button>
             <mat-radio-button class="ms-4" value="Other">Other</mat-radio-button>
           </mat-radio-group>
         </div>
-          <p>You selected: {{ Gender }}</p>
 
     </mat-card-content>
 
@@ -58,10 +57,12 @@
 
 
     <mat-form-field class="date">
-        <label>Choose Your Birth date</label>
+        <div>
+        <label>Choose Your Birth date :</label>
         <input matInput [matDatepicker]="picker" formControlName="dob">
+    </div>
         <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker-toggle class="date-toggle" matIconSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
 
@@ -78,13 +79,12 @@
     <mat-card-content class="d-flex flex-column content-with-border">
         <div class="d-flex">
         <label>Status :</label>
-        <mat-radio-group [(ngModel)]="selectedOption" class="mb-2" formControlName="status">
+        <mat-radio-group class="mb-2" formControlName="status">
             <mat-radio-button class="ms-4" value="Single">Single</mat-radio-button>
             <mat-radio-button class="ms-4" value="Married">Married</mat-radio-button>
             <mat-radio-button class="ms-4" value="Prefer Not To Say">Prefer Not To Say</mat-radio-button>
           </mat-radio-group>
         </div>
-          <p>You selected: {{ selectedOption }}</p>
 
     </mat-card-content>
     <mat-card-content class="d-flex justify-content-end">
