--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -1,98 +1,111 @@
+<div class="row d-flex justify-content-center main-body mt-5 mb-5">
+    <div class="col-8">
+        <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
+            <mat-card>
 
-<div class="row d-flex justify-content-center">
-<div class="col-8">
-    <form [formGroup]="empForm" (ngSubmit)="onFormSubmit()">
-<mat-card>
+                <div class="d-flex justify-content-center mb-5 ">
+                    <div class="user-image d-flex justify-content-center">
+                        <input class="image-input" type="file" #Image accept="image/*"
+                            (change)="handleFileInput($event)">
+                        <img class="user-image" [src]="imageUrl" alt="">
+                    <div class="edit-pencil"><i class="bi bi-pencil-square" style="font-size: x-large;color: white;"></i></div>
 
-    <div class="d-flex justify-content-center">
-        <div class="user-image d-flex justify-content-center">
-            <input class="image-input" type="file" #Image accept="image/*" (change)="handleFileInput($event)">
-            <img class="user-image" 
-            [src]="imageUrl" alt="">
-        </div>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-between">
+                    <mat-card-content class="d-flex flex-column half-size">
+                        <label>Name</label>
+                        <mat-form-field appearance="outline">
+
+                            <mat-label>Name</mat-label>
+                            <input matInput formControlName="name">
+                        </mat-form-field>
+                    </mat-card-content>
+
+
+                    <mat-card-content class="d-flex flex-column half-size">
+                        <label>Email</label>
+                        <mat-form-field appearance="outline">
+
+                            <mat-label>Email</mat-label>
+                            <input matInput formControlName="email">
+                        </mat-form-field>
+
+                    </mat-card-content>
+                </div>
+
+
+                <div class="d-flex justify-content-between">
+                    <mat-card-content class="d-flex flex-column mb-4 content-with-border half-size">
+                        <div class="d-flex">
+                            <label>Gender :</label>
+                            <mat-radio-group class="mb-2" formControlName="gender">
+                                <mat-radio-button class="ms-4" value="Male">Male</mat-radio-button>
+                                <mat-radio-button class="ms-4" value="Female">Female</mat-radio-button>
+                                <mat-radio-button class="ms-4" value="Other">Other</mat-radio-button>
+                            </mat-radio-group>
+                        </div>
+
+                    </mat-card-content>
+
+                    <mat-card-content class="d-flex flex-column content-with-border half-size">
+                        <div class="d-flex">
+                            <label>Status :</label>
+                            <mat-radio-group class="mb-2" formControlName="status">
+                                <mat-radio-button class="ms-4" value="Single">Single</mat-radio-button>
+                                <mat-radio-button class="ms-4" value="Married">Married</mat-radio-button>
+                                <mat-radio-button class="ms-4" value="Prefer Not To Say">Prefer Not To
+                                    Say</mat-radio-button>
+                            </mat-radio-group>
+                        </div>
+
+                    </mat-card-content>
+
+                </div>
+
+                <div class="d-flex justify-content-between">
+
+                    <mat-card-content class="d-flex flex-column half-size">
+                        <label>Phone Number</label>
+                        <mat-form-field appearance="outline">
+
+                            <mat-label>Phone Number</mat-label>
+                            <input matInput formControlName="phonenumber">
+                        </mat-form-field>
+
+                    </mat-card-content>
+
+
+                    <mat-form-field class="date half-size">
+                        <div>
+                            <label>Choose Your Birth date :</label>
+                            <input matInput [matDatepicker]="picker" formControlName="dob">
+                        </div>
+                        <mat-hint>MM/DD/YYYY</mat-hint>
+                        <mat-datepicker-toggle class="date-toggle" matIconSuffix [for]="picker"></mat-datepicker-toggle>
+                        <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+
+                </div>
+
+                <mat-card-content class="d-flex flex-column">
+                    <label>About me</label>
+                    <mat-form-field appearance="outline">
+
+                        <mat-label>About Me</mat-label>
+                        <input matInput formControlName="aboutme">
+                    </mat-form-field>
+
+                </mat-card-content>
+
+
+                <mat-card-content class="d-flex justify-content-center">
+                    <button [disabled]="Image.value==''" mat-raised-button color="primary" class="w-50"
+                        type="submit">Save</button>
+                </mat-card-content>
+                <mat-card-footer></mat-card-footer>
+            </mat-card>
+        </form>
     </div>
-    <mat-card-content class="d-flex flex-column">
-        <label>Name</label>
-        <mat-form-field appearance="outline" >
-           
-            <mat-label>Name</mat-label>
-            <input matInput formControlName="name">
-        </mat-form-field>
-    </mat-card-content>
-
-
-    <mat-card-content class="d-flex flex-column">
-        <label>Email</label>
-        <mat-form-field appearance="outline" >
-           
-            <mat-label>Email</mat-label>
-            <input matInput formControlName="email">
-        </mat-form-field>
-
-    </mat-card-content>
-
-
-    <mat-card-content class="d-flex flex-column mb-4 content-with-border">
-        <div class="d-flex">
-        <label>Gender :</label>
-        <mat-radio-group  class="mb-2" formControlName="gender">
-            <mat-radio-button class="ms-4" value="Male">Male</mat-radio-button>
-            <mat-radio-button class="ms-4" value="Female">Female</mat-radio-button>
-            <mat-radio-button class="ms-4" value="Other">Other</mat-radio-button>
-          </mat-radio-group>
-        </div>
-         
-    </mat-card-content>
-
-
-    <mat-card-content class="d-flex flex-column">
-        <label>Phone Number</label>
-        <mat-form-field appearance="outline" >
-           
-            <mat-label>Phone Number</mat-label>
-            <input matInput formControlName="phonenumber">
-        </mat-form-field>
-
-    </mat-card-content>
-
-
-    <mat-form-field class="date">
-        <div>
-        <label>Choose Your Birth date :</label>
-        <input matInput [matDatepicker]="picker" formControlName="dob">
-    </div>
-        <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle class="date-toggle" matIconSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
-
-    <mat-card-content class="d-flex flex-column">
-        <label>About me</label>
-        <mat-form-field appearance="outline" >
-           
-            <mat-label>About Me</mat-label>
-            <input matInput formControlName="aboutme">
-        </mat-form-field>
-
-    </mat-card-content>
-
-    <mat-card-content class="d-flex flex-column content-with-border">
-        <div class="d-flex">
-        <label>Status :</label>
-        <mat-radio-group class="mb-2" formControlName="status">
-            <mat-radio-button class="ms-4" value="Single">Single</mat-radio-button>
-            <mat-radio-button class="ms-4" value="Married">Married</mat-radio-button>
-            <mat-radio-button class="ms-4" value="Prefer Not To Say">Prefer Not To Say</mat-radio-button>
-          </mat-radio-group>
-        </div>
-          
-
-    </mat-card-content>
-    <mat-card-content class="d-flex justify-content-end">
-            <button mat-raised-button color="primary" class="w-100" type="submit">Save</button>
-    </mat-card-content>
-    <mat-card-footer></mat-card-footer>
-</mat-card>
-</form>
-</div>
 </div>
