--- a/AKchatApp/src/app/chat/private-chats/private-chats.component.html
+++ b/AKchatApp/src/app/chat/private-chats/private-chats.component.html
@@ -8,7 +8,8 @@
           <div class="card-body card-messages">
           <app-messages [messages]="service.privateMessages"></app-messages>  
      </div>
-     <div class="card-footer">
+     <div *ngIf="isTyping">Typing the user...</div>
+  <div class="card-footer">
       <app-chat-input (contentemitter)="sendMessage($event)"></app-chat-input>
   </div>  
   </div>
