--- a/AKchatApp/src/app/chat/chat-input/chat-input.component.html
+++ b/AKchatApp/src/app/chat/chat-input/chat-input.component.html
@@ -1,7 +1,8 @@
 <form #messageForm="ngForm"  autocomplete="off">
     <div class="row">
         <div class="col-9">
-            <input  type="text" [(ngModel)]="content" required name="content"  class="form-control" placeholder="send message">
+            <input  type="text" [(ngModel)]="content" required name="content"  class="form-control" placeholder="send message"
+            (input)="onTyping()">
         </div>
         <div class="col-3">
             <div class="d-grid">
