--- a/AKchatApp/src/app/chat/private-chats/private-chats.component.html
+++ b/AKchatApp/src/app/chat/private-chats/private-chats.component.html
@@ -1,7 +1,38 @@
 <div class="modal-header">
+    <div class="display">
+        <div>
+            <button class="touserimgbtn me-3 ms-2" (click)="toggleDivision()"><img class="touserimg" src={{image}}></button>
+        </div>
+        <span class="align-self-center" style="font-size: x-large;">
+            {{toUser}}
+        </span>
+    </div>
     <h4 class="modal-title">{{toUser}}</h4><img src="/assets/img/indityp.gif" style="mix-blend-mode: multiply;height:25px;width:60px">
     <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
-  </div>
+</div>
+
+
+<!-- Button trigger modal -->
+<!-- <button type="button" class="btn btn-primary touserimg" data-toggle="modal" data-target="#exampleModalCenter">
+    <img class="touserimg" src={{image}}>
+  </button> -->
+
+
+
+
+<div *ngIf="divisionVisible" class="my-division">
+    <img class="" style=" height: 400px;
+  width: 400px;" src={{image}}>
+
+    <button type="button" class="my-division-close btn-close" aria-label="Close" (click)="toggleDivision()"></button>
+
+</div>
+
+
+
+
+
+
   <div class="modal-body">
       <div class="card users-card">
           <div class="card-header"><h3>Messages</h3></div>
