--- a/AKchatApp/src/app/user-profile/user-profile.component.html
+++ b/AKchatApp/src/app/user-profile/user-profile.component.html
@@ -101,7 +101,7 @@
 
 
                 <mat-card-content class="d-flex justify-content-center">
-                    <button [disabled]="Image.value==''" mat-raised-button color="primary" class="w-50"
+                    <button    mat-raised-button color="primary" class="w-50"
                         type="submit">Save</button>
                 </mat-card-content>
                 <mat-card-footer></mat-card-footer>
